# example-greenhouse

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.py  device.yaml  jettyscript.json  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.c
